--- a/.env
+++ b/.env
@@ -8,6 +8,6 @@ DB_PASSWORD = admin
 DB_PORT = 5432
 
 # CẤU HÌNH CÁC DATABASE 
-DB_HO_KHAU = Quan_li_ho_khau
-DB_NHA_VAN_HOA = Quan_li_nha_van_hoa
-DB_PHAN_QUYEN = Dang_nhap_phan_quyen
+DB_QUAN_LI_HO_KHAU = Quan_li_ho_khau
+DB_QUAN_LI_NHA_VAN_HOA = Quan_li_nha_van_hoa
+DB_DANG_NHAP_PHAN_QUYEN = Dang_nhap_phan_quyen
