--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ PORT = 8080
 
 # CẤU HÌNH POSTGRESQL (Dùng chung cho máy local)
 DB_HOST = localhost
-DB_USER = postgres
+DB_USER = todanpho
 DB_PASSWORD = admin
 DB_PORT = 5432
 
