--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@ PORT = 8080
 
 # CẤU HÌNH POSTGRESQL (Dùng chung cho máy local)
 DB_HOST = localhost
-DB_USER = postgres
-DB_PASSWORD = admin
+DB_USER = admin
+DB_PASSWORD = 12345678
 DB_PORT = 5432
 
 # CẤU HÌNH CÁC DATABASE 
