Update DTB + Pool

--- a/.env
+++ b/.env
@@ -11,3 +11,4 @@ DB_PORT = 5432
 DB_QUAN_LI_HO_KHAU = Quan_li_ho_khau
 DB_QUAN_LI_NHA_VAN_HOA = Quan_li_nha_van_hoa
 DB_DANG_NHAP_PHAN_QUYEN = Dang_nhap_phan_quyen
+DB_THONG_KE_BAO_CAO = Thong_ke_bao_cao
